# steam-emu

./: .gitignore  Cargo.toml  README.md  flake.nix  spacewar.sh
.github/workflows/: build_nix.yml
src/: lib.rs  steam_client.rs  steam_game_server.rs  steam_id.rs  steam_internal.rs  universe.rs
src/internal/: mod.rs  steam_api_context.rs
src/macros/: callbacks.rs  mod.rs
src/steam_api/: app_list.rs  apps.rs  controller.rs  friends.rs  game_search.rs  game_server.rs  game_server_stats.rs  html_surface.rs  http.rs  input.rs  interfaces.rs  inventory.rs  matchmaking.rs  matchmaking_servers.rs  mod.rs  music.rs  music_remote.rs  networking_utils.rs  parental_settings.rs  parties.rs  remote_play.rs  remote_storage.rs  screenshots.rs  steam_user.rs  struct CCallbackInternal_OnSteamServersC.cpp  ugc.rs  user.rs  user_stats.rs  utils.rs  video.rs
src/steam_api/callbacks/: call_results.rs  callbacks.rs  categories.rs  mod.rs  steam_callback.rs
src/steam_api/networking/: messages.rs  mod.rs  networking.rs  sockets.rs  types.rs
src/steam_client/: get_generic_interfaces.rs  methods.rs  mod.rs
