[package]
name = "steam-emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "steam_emu"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "steam_emu_debug"
path = "src/bin/main.rs"

[dependencies]
ctor = "0.1.22"

libloading = "0.7.3"

color-eyre = "0.6.1"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"