[package]
name = "steam-emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "steam_emu"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "steam_emu_debug"
path = "src/bin/main.rs"

[dependencies]
ctor = "0.1.22"

libloading = "0.7.3"
lazy_static = "1.4.0"

color-eyre = "0.6.1"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

vtables = "0.1"
vtables_derive = "0.1"

const-cstr = "0.3.0"

bitfield = "0.13.2"

[dependencies.windows]
version = "0.36.1"
features = [
  "Win32_Foundation",
  "Win32_System_Kernel",
  "Win32_System_Diagnostics_Debug",
]